--- a/application/admin_ace/view/login/index.html
+++ b/application/admin_ace/view/login/index.html
@@ -1,168 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta charset="utf-8" />
-    <title>管理员登录</title>
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta charset="utf-8" />
+        <title>ACE后台管理系统登录</title>
 
-    <meta name="description" content="User login page" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+        <meta name="description" content="User login page" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 
-    <!-- bootstrap & fontawesome -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.css" />
-    <link rel="stylesheet" href="/assets/css/font-awesome.css" />
+        <!-- bootstrap & fontawesome -->
+        <link rel="stylesheet" href="/assets/css/bootstrap.css" />
+        <link rel="stylesheet" href="/assets/css/font-awesome.css" />
 
-    <!-- text fonts -->
-    <link rel="stylesheet" href="/assets/css/ace-fonts.css" />
+        <!-- text fonts -->
+        <link rel="stylesheet" href="/assets/css/ace-fonts.css" />
 
-    <!-- ace styles -->
-    <link rel="stylesheet" href="/assets/css/ace.css" />
+        <!-- ace styles -->
+        <link rel="stylesheet" href="/assets/css/ace.css" />
 
-    <!--[if lte IE 9]>
-    <link rel="stylesheet" href="/assets/css/ace-part2.css" />
-    <![endif]-->
-    <link rel="stylesheet" href="/assets/css/ace-rtl.css" />
+        <!--[if lte IE 9]>
+            <link rel="stylesheet" href="/assets/css/ace-part2.css" />
+        <![endif]-->
+        <link rel="stylesheet" href="/assets/css/ace-rtl.css" />
 
-    <!--[if lte IE 9]>
-    <link rel="stylesheet" href="/assets/css/ace-ie.css" />
-    <![endif]-->
+        <!--[if lte IE 9]>
+          <link rel="stylesheet" href="/assets/css/ace-ie.css" />
+        <![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
-    <!--[if lt IE 9]>
-    <script src="/assets/js/html5shiv.js"></script>
-    <script src="/assets/js/respond.js"></script>
-    <![endif]-->
-</head>
+        <!--[if lt IE 9]>
+        <script src="/assets/js/html5shiv.js"></script>
+        <script src="/assets/js/respond.js"></script>
+        <![endif]-->
+    </head>
 
-<body class="login-layout">
-<div class="main-container">
-    <div class="main-content">
-        <div class="row">
-            <div class="col-sm-10 col-sm-offset-1">
-                <div class="login-container">
-                    <div class="center">
-                        <h1>
-                            <i class="ace-icon "></i>
-                            <span class="red">OursPHP Demo</span>
-                            <span class="white" id="id-text2">Application</span>
-                        </h1>
-                        <h4 class="blue" id="id-company-text">&copy; 公司名称</h4>
-                    </div>
+    <body class="login-layout light-login">
+        <div class="main-container">
+            <div class="main-content">
+                <div class="row">
+                    <div class="col-sm-10 col-sm-offset-1">
+                        <div class="login-container">
+                            <div class="center">
+                                <h1>
+                                    <i class="ace-icon fa fa-leaf green"></i>
+                                    <span class="red">Ace</span>
+                                    <span class="grey" id="id-text2">后台登录</span>
+                                </h1>
+                                <h4 class="blue" id="id-company-text">&copy; 无限公司</h4>
+                            </div>
 
-                    <div class="space-6"></div>
+                            <div class="space-6"></div>
 
-                    <div class="position-relative">
-                        <div id="login-box" class="login-box visible widget-box no-border">
-                            <div class="widget-body">
-                                <div class="widget-main">
-                                    <h4 class="header blue lighter bigger">
-                                        <i class="ace-icon fa fa-coffee green"></i>
-                                        Please Enter Your Information
-                                    </h4>
+                            <div class="position-relative">
+                                <div id="login-box" class="login-box visible widget-box no-border">
+                                    <div class="widget-body">
+                                        <div class="widget-main">
+                                            <h4 class="header blue lighter bigger">
+                                                <i class="ace-icon fa fa-coffee green"></i>
+                                                请输入你的信息
+                                            </h4>
 
-                                    <div class="space-6"></div>
+                                            <div class="space-6"></div>
 
-                                    <form method="post">
-                                        <fieldset>
-                                            <label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="text" class="form-control" placeholder="Username" name="vars[username]" required/>
-															<i class="ace-icon fa fa-user"></i>
-														</span>
-                                            </label>
+                                            <form method="post">
+                                                <fieldset>
+                                                    <label class="block clearfix">
+                                                        <span class="block input-icon input-icon-right">
+                                                        <input type="text" class="form-control" placeholder="用户名" name="name" required/>
+                                                        <i class="ace-icon fa fa-user"></i>
+                                                        </span>
+                                                    </label>
 
-                                            <label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" class="form-control" placeholder="Password" name="vars[password]" required/>
-															<i class="ace-icon fa fa-lock"></i>
-														</span>
-                                            </label>
+                                                    <label class="block clearfix">
+                                                        <span class="block input-icon input-icon-right">
+                                                        <input type="password" name="password" class="form-control" placeholder="密码" required/>
+                                                        <i class="ace-icon fa fa-lock"></i>
+                                                        </span>
+                                                    </label>
 
-                                            <label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-                                                            <img id="img-captcha" src="/login/Captcha"/>
-                                                            <input class="input-small pull-right" maxlength="4" type="text" name="vars[code]" required/>
-															<i class="ace-icon fa fa-lock"></i>
-														</span>
-                                            </label>
+                                                    <label class="block clearfix">
+                                                        <span class="block input-icon input-icon-right">
+                                                        <img id="img-captcha" src="/login/captcha?t=rand"/>
+                                                        <input class="pull-right" maxlength="4" type="text" name="vars[code]" required/>
+                                                        <i class="ace-icon fa fa-lock"></i>
+                                                        </span>
+                                                    </label>
 
+                                                    <div class="space"></div>
 
-                                            <div class="space"></div>
-                                            {{if !empty($msg)}}
-                                            <div class="center red">
-                                                <i class="ace-icon glyphicon	glyphicon-volume-down  green"></i><span class="bigger-110">{{$msg}}</span>
-                                            </div>
-                                            {{/if}}
-                                            <div class="clearfix">
-                                                <label class="inline">
+                                                    <div class="clearfix">
+                                                        <label class="inline">
+                                                            <input type="checkbox" class="ace" />
+                                                            <span class="lbl">记住</span>
+                                                        </label>
 
-                                                </label>
+                                                        <button type="submit" class="width-35 pull-right btn btn-sm btn-primary">
+                                                            <i class="ace-icon fa fa-key"></i>
+                                                            <span class="bigger-110">登录</span>
+                                                        </button>
+                                                    </div>
 
-                                                <button id="btn-login" type="submit" class="width-35 pull-right btn btn-sm btn-primary">
-                                                    <i class="ace-icon fa fa-key"></i>
-                                                    <span class="bigger-110">Login</span>
-                                                </button>
-                                            </div>
+                                                    <div class="space-4"></div>
+                                                </fieldset>
+                                            </form>
 
-                                            <div class="space-4"></div>
-                                        </fieldset>
-                                    </form>
+                                        </div><!-- /.widget-main -->
 
-                                    <div class="social-or-login center">
+                                    </div><!-- /.widget-body -->
+                                </div><!-- /.login-box -->
 
-                                    </div>
+                            <div class="navbar-fixed-top align-right">
+                                <br />
+                                &nbsp;
+                                <a id="btn-login-dark" href="#">Dark</a>
+                                &nbsp;
+                                <span class="blue">/</span>
+                                &nbsp;
+                                <a id="btn-login-blur" href="#">Blur</a>
+                                &nbsp;
+                                <span class="blue">/</span>
+                                &nbsp;
+                                <a id="btn-login-light" href="#">Light</a>
+                                &nbsp; &nbsp; &nbsp;
+                            </div>
+                        </div>
+                    </div><!-- /.col -->
+                </div><!-- /.row -->
+            </div><!-- /.main-content -->
+        </div><!-- /.main-container -->
 
-                                    <div class="space-6"></div>
+        <!-- basic scripts -->
 
-                                </div><!-- /.widget-main -->
+        <!--[if !IE]> -->
+        <script src="/assets/js/jquery.js"></script>
 
-                                <div class="toolbar clearfix">
+        <!-- <![endif]-->
 
-                                </div>
-                            </div><!-- /.widget-body -->
-                        </div><!-- /.login-box -->
-
-
-                    </div><!-- /.position-relative -->
-
-                </div>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.main-content -->
-</div><!-- /.main-container -->
-
-
-
-<!-- basic scripts -->
-
-<!--[if !IE]> -->
-<script src="/assets/js/jquery.js"></script>
-
-<!-- <![endif]-->
-
-<!--[if IE]>
+        <!--[if IE]>
 <script src="/assets/js/jquery1x.js"></script>
 <![endif]-->
 <script type="text/javascript">
-    if('ontouchstart' in document.documentElement) document.write("<script src='/assets/js/jquery.mobile.custom.js'>"+"<"+"/script>");
+if('ontouchstart' in document.documentElement) {
+    document.write("<script src='/assets/js/jquery.mobile.custom.js'>"+"<"+"/script>");
+}
 </script>
 
-
+<!-- inline scripts related to this page -->
 <script type="text/javascript">
 
+//you don't need this, just used for changing background
+jQuery(function($) {
 
-    //you don't need this, just used for changing background
-    jQuery(function($) {
-        $('#btn-login').on('click', function(e) {
-
-        });
-        $('#img-captcha').on('click', function(e) {
-            $("#img-captcha").attr("src","/login/Captcha?t="+Date.parse(new Date()));
-        });
-
+    $('#img-captcha').on('click', function(e) {
+        $("#img-captcha").attr("src","/login/Captcha?t="+Date.parse(new Date()));
+        e.preventDefault();
     });
+
+
+
+    $('#btn-login-dark').on('click', function(e) {
+        $('body').attr('class', 'login-layout');
+        $('#id-text2').attr('class', 'white');
+        $('#id-company-text').attr('class', 'blue');
+
+        e.preventDefault();
+    });
+
+    $('#btn-login-light').on('click', function(e) {
+        $('body').attr('class', 'login-layout light-login');
+        $('#id-text2').attr('class', 'grey');
+        $('#id-company-text').attr('class', 'blue');
+        
+        e.preventDefault();
+    });
+
+    $('#btn-login-blur').on('click', function(e) {
+        $('body').attr('class', 'login-layout blur-login');
+        $('#id-text2').attr('class', 'white');
+        $('#id-company-text').attr('class', 'light-blue');
+        
+        e.preventDefault();
+    });
+});
 </script>
-<!-- inline scripts related to this page -->
-</body>
+    </body>
 </html>
