--- a/application/admin_ace/view/index/index.html
+++ b/application/admin_ace/view/index/index.html
@@ -5,11 +5,37 @@
             <button type="button" class="close" data-dismiss="alert">
                 <i class="ace-icon fa fa-times"></i>
             </button>
-
             <i class="ace-icon fa fa-check green"></i>
-
-           這個是用oursphp 写的简单的通用后台，实现了 用户登录、角色、权限的控制管理，只需要下载下来后写自己的业务逻辑即可快速完成后台类站点。
+            简单的后台示例，实现了 用户登录、角色、权限的控制管理，只需要下载下来后写自己的业务逻辑即可快速完成后台类站点。
         </div>
+
+
+        <!-- 站点信息 start -->
+        <div id="accordion-sysinfo" class="accordion-style1 panel-group col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a class="accordion-toggle" data-toggle="collapse"
+                           data-parent="#accordion-sysinfo" href="#sysinfo">
+                            <i class="ace-icon fa fa-angle-down bigger-110"
+                               data-icon-hide="ace-icon fa fa-angle-down"
+                               data-icon-show="ace-icon fa fa-angle-right"></i>
+                            &nbsp;站点信息
+                        </a>
+                    </h4>
+                </div>
+
+                <div class="panel-collapse collapse in" id="sysinfo">
+                    <div class="panel-body">
+                        <p>运行方式：{{$smarty.server.SERVER_SOFTWARE}}</p>
+                        <p>服务器IP：{{$smarty.server.SERVER_ADDR}}</p>
+                        <p>程序版本：{{$_sys_version}}&nbsp;&nbsp;&nbsp;</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 站点信息 end -->
 
         <!-- PAGE CONTENT ENDS -->
     </div><!-- /.col -->
