--- a/application/admin_ace/view/layout/part_userinfo.html
+++ b/application/admin_ace/view/layout/part_userinfo.html
@@ -226,7 +226,7 @@
         <a data-toggle="dropdown" href="#" class="dropdown-toggle">
             <img class="nav-user-photo" src="/assets/avatars/user.jpg" alt="Jason's Photo">
             <span class="user-info">
-						<small>Welcome,</small> {{$me['nickname']}}
+						<small>Welcome,</small> {{$me['nick']}}
 					</span>
             <i class="ace-icon fa fa-caret-down"></i>
         </a>
