--- a/application/admin_ace/view/sysrole/index.html
+++ b/application/admin_ace/view/sysrole/index.html
@@ -5,15 +5,11 @@
                    class="table table-striped table-hover">
                 <thead>
                 <tr>
-                    <th class="col-sm-1">用户名</th>
-                    <th class="col-sm-1">昵称</th>
-                    <th class="col-sm-1">性别</th>
-                    <th class="col-sm-1">邮箱</th>
-                    <th class="col-sm-1">手机号</th>
-                    <th class="col-sm-1">角色</th>
+                    <th  class="col-sm-1">角色名称</th>
+                    <th class="col-sm-3">角色描述</th>
                     <th style="width: 80px;">状态</th>
-                    <th><a class="blue" title="新增管理员"
-                           href="/{{$_controller}}/manageradd"> <i
+                    <th><a class="blue" title="添加新角色"
+                           href="/{{$_controller}}/roleadd"> <i
                             class="glyphicon glyphicon-plus bigger-130"></i>
                     </a></th>
                 </tr>
@@ -22,46 +18,36 @@
                 <tbody>
                 {{foreach $rows as $row}}
                 <tr>
-                    <td>{{$row['username']}}</th>
+                    <td>{{$row['name']}}</th>
                     <td>
-                        {{$row['nick']}}
+                        {{$row['desc']}}
                     </td>
                     <td>
-                        {{if $row['sex']==1}}
-                        男
-                        {{else}}
-                        女
-                        {{/if}}
-                    </th>
-                    <td>{{$row['mail']}}</th>
-                    <td>{{$row['tel']}}</th>
-                    <td>{{$row['rolename']}}</th>
-                    <td>
                         {{if $row['status']==1}}
-                        <a class="blue" href="javascript:del('/{{$_controller}}/managerlock?id={{$row['id']}}')">
+                        <a class="blue" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
                             <span title="点击锁定" class="badge badge-warning">正常</span></a>
                         {{else}}
-                        <a class="blue" href="javascript:del('/{{$_controller}}/managerlock?id={{$row['id']}}')">
+                        <a class="blue" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
                             <span title="点击解锁" class="badge">锁定</span></a>
                         {{/if}}
                     </td>
                     <td><div class="visible-md visible-lg action-buttons">
                         <a class="blue" title="编辑"
-                           href="/{{$_controller}}/manageradd?id={{$row['id']}}"><i
+                           href="/{{$_controller}}/add?id={{$row['id']}}"><i
                                 class="fa fa-pencil bigger-130"></i> </a>
                         {{if $row['status']==1}} <a
-                            class="blue" title="点击锁定" href="javascript:del('/{{$_controller}}/managerlock?id={{$row['id']}}')">
+                            class="blue" title="点击锁定" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
                         <i class="fa fa-unlock bigger-130"></i>
                     </a> {{else}} <a class="blue" title="点击解锁"
-                                     href="javascript:del('/{{$_controller}}/managerlock?id={{$row['id']}}')">
+                                     href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
                         <i class=" fa fa-lock bigger-130"></i>
                     </a> {{/if}}
 
                         <a class="blue" title="删除"
-                           href="javascript:del('/{{$_controller}}/managerdel?id={{$row['id']}}')">
+                           href="javascript:del('/{{$_controller}}/del?id={{$row['id']}}')">
                             <i class="fa fa-trash-o bigger-130"></i>
                         </a>
-
+                    </div></td>
                 </tr>
                 {{/foreach}}
                 </tbody>
@@ -76,11 +62,11 @@
 </div>
 
 <script>
-jQuery(function($) {
-    $('.glyphicon.glyphicon-plus').each(function(){
-        $(this).on('click', function(){
-            $(this).toggleClass('glyphicon-minus');
+    jQuery(function($) {
+        $('.glyphicon.glyphicon-plus').each(function(){
+            $(this).on('click', function(){
+                $(this).toggleClass('glyphicon-minus');
+            });
         });
-    });
-});
+    })
 </script>
