--- a/application/admin_ace/view/system/manageradd.html
+++ b/application/admin_ace/view/system/manageradd.html
@@ -24,7 +24,7 @@
                 <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 昵称: </label>
 
                 <div class="col-sm-9">
-                    <input name="vars[nickname]" class="col-xs-8 col-sm-3" type="text" value="{{$user['nickname']}}" required>
+                    <input name="vars[nick]" class="col-xs-8 col-sm-3" type="text" value="{{$user['nick']}}" required>
                 </div>
             </div>
             <div class="form-group">
@@ -49,7 +49,7 @@
                 <label class="col-sm-3 control-label no-padding-right" for="form-field-1"> 手机: </label>
 
                 <div class="col-sm-9">
-                    <input name="vars[telphone]" maxlength="11" class="col-xs-8 col-sm-2" type="number" value="{{$user['telphone']}}" required>
+                    <input name="vars[tel]" maxlength="11" class="col-xs-8 col-sm-2" type="number" value="{{$user['tel']}}" required>
                 </div>
             </div>
             <div class="form-group">
@@ -81,19 +81,14 @@
 
             <div class="space-4"></div>
 
-
-
             <div class="clearfix form-actions">
                 <div class="col-md-offset-3 col-md-9">
                     <button class="btn btn-info" type="submit">
-                        <i class="ace-icon fa fa-check bigger-110"></i>
-                        Submit
+                        <i class="ace-icon fa fa-check bigger-110"></i> Submit
                     </button>
-
                     &nbsp; &nbsp; &nbsp;
                     <button class="btn" type="reset">
-                        <i class="ace-icon fa fa-undo bigger-110"></i>
-                        Reset
+                        <i class="ace-icon fa fa-undo bigger-110"></i> Reset
                     </button>
                 </div>
             </div>
@@ -102,7 +97,7 @@
     </div><!-- /.col -->
 </div>
 <script>
-    jQuery(function($) {
+jQuery(function($) {
 
-    })
+})
 </script>
