--- a/application/admin_ace/view/layout/part_userinfo.html
+++ b/application/admin_ace/view/layout/part_userinfo.html
@@ -234,7 +234,7 @@
             <li><a href="#"><i class="ace-icon fa fa-cog"></i> 系统设置</a></li>
             <li><a href="?page=profile"><i class="ace-icon fa fa-user"></i> 个人设置</a></li>
             <li class="divider"></li>
-            <li><a href="/login/loginout"><i class="ace-icon fa fa-power-off"></i> 退出登录</a></li>
+            <li><a href="/login/out"><i class="ace-icon fa fa-power-off"></i> 退出登录</a></li>
         </ul>
     </li>                <!-- /section:basics/navbar.user_menu -->
 </ul>
