--- a/application/admin_ace/view/sysrole/index.html
+++ b/application/admin_ace/view/sysrole/index.html
@@ -9,7 +9,7 @@
                     <th class="col-sm-3">角色描述</th>
                     <th style="width: 80px;">状态</th>
                     <th><a class="blue" title="添加新角色"
-                           href="/{{$_controller}}/roleadd"> <i
+                           href="/{{$_controller}}/add"> <i
                             class="glyphicon glyphicon-plus bigger-130"></i>
                     </a></th>
                 </tr>
