--- a/application/admin_ace/view/sysfunc/add.html
+++ b/application/admin_ace/view/sysfunc/add.html
@@ -48,7 +48,7 @@
                 <div class="col-sm-9">
                     <label class="inline">
 
-                        <input id="id-button-borders" name="vars[ismenu]" checked="checked" class="ace ace-switch ace-switch-5" type="checkbox">
+                        <input id="id-button-borders" name="vars[is_menu]" checked="checked" class="ace ace-switch ace-switch-5" type="checkbox">
                         <span class="lbl middle"></span>
                     </label>
                 </div>
@@ -60,7 +60,7 @@
                 <label class="col-sm-3 control-label no-padding-right" for="form-input-readonly"> 功能描述: </label>
 
                 <div class="col-sm-9">
-                    <textarea class="col-sm-5" name="vars[description]">{{$item['description']}}</textarea>
+                    <textarea class="col-sm-5" name="vars[desc]">{{$item['desc']}}</textarea>
                 </div>
             </div>
 
@@ -78,12 +78,12 @@
             </div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-input-readonly"></label>
+                <label class="col-sm-1 control-label no-padding-right" for="form-input-readonly"></label>
 
-                <div class="col-sm-9">
+                <div class="col-sm-8">
                     <div id="widget-body-icon" class="widget-box">
                         <div class="widget-header">
-                            <h4 class="smaller">请选择</h4>
+                            <h4 class="smaller">请选择菜单图标</h4>
                         </div>
 
                         <div  class="widget-body">
@@ -106,14 +106,12 @@
             <div class="clearfix form-actions">
                 <div class="col-md-offset-3 col-md-9">
                     <button class="btn btn-info" type="submit">
-                        <i class="ace-icon fa fa-check bigger-110"></i>
-                        Submit
+                        <i class="ace-icon fa fa-check bigger-110"></i>提交
                     </button>
 
                     &nbsp; &nbsp; &nbsp;
                     <button class="btn" type="reset">
-                        <i class="ace-icon fa fa-undo bigger-110"></i>
-                        Reset
+                        <i class="ace-icon fa fa-undo bigger-110"></i>重置
                     </button>
                 </div>
             </div>
@@ -122,19 +120,18 @@
     </div><!-- /.col -->
 </div>
 <script>
-    jQuery(function($) {
-        $('.btn.btn-xs').each(function(){
-            $(this).on('click', function(){
-                var data=$(this).attr('data');
-                $('#selected_icon').attr('class','icon-only ace-icon bigger-150 '+data)
-                $('#hidden_icon').val(data);
-            });
-
+jQuery(function($) {
+    $('.btn.btn-xs').each(function(){
+        $(this).on('click', function(){
+            var data=$(this).attr('data');
+            $('#selected_icon').attr('class','icon-only ace-icon bigger-150 '+data)
+            $('#hidden_icon').val(data);
         });
+    });
 
-        $('#id-button-borders').attr('checked' , 'checked').on('click', function(){
-            $('#widget-body-icon').toggleClass('hide');
-            $('#form-group-icon').toggleClass('hide');
-        });
-    })
+    $('#id-button-borders').attr('checked' , 'checked').on('click', function(){
+        $('#widget-body-icon').toggleClass('hide');
+        $('#form-group-icon').toggleClass('hide');
+    });
+})
 </script>
