--- a/application/admin_ace/view/sysuser/index.html
+++ b/application/admin_ace/view/sysuser/index.html
@@ -6,30 +6,43 @@
                 <thead>
                 <tr>
                     <th class="col-sm-1">序号</th>
-                    <th class="col-sm-1">角色名称</th>
-                    <th class="col-sm-3">角色描述</th>
+                    <th class="col-sm-1">用户名</th>
+                    <th class="col-sm-1">昵称</th>
+                    <th class="col-sm-1">性别</th>
+                    <th class="col-sm-1">邮箱</th>
+                    <th class="col-sm-1">手机号</th>
+                    <th class="col-sm-1">角色</th>
                     <th style="width: 80px;">状态</th>
-                    <th><a class="blue" title="添加新角色"
+                    <th><a class="blue" title="新增管理员"
                            href="/{{$_controller}}/add"> <i
                             class="glyphicon glyphicon-plus bigger-130"></i>
                     </a></th>
                 </tr>
                 </thead>
 
+
                 <tbody>
-                {{foreach $rows as $row}}
+                {{foreach from=$rows item=row}}
                 <tr>
-                    <td>{{$row['id']}}</th>
-                    <td>{{$row['name']}}</th>
+                    <td>{{$row['id']}}</td>
+                    <td>{{$row['username']}}</th>
                     <td>
-                        {{$row['desc']}}
+                        {{$row['nick']}}
                     </td>
                     <td>
+                        {{if $row['sex']==1}} 男
+                        {{else}} 女
+                        {{/if}}
+                    </th>
+                    <td>{{$row['mail']}}</th>
+                    <td>{{$row['tel']}}</th>
+                    <td>{{$row['rolename']}}</th>
+                    <td>
                         {{if $row['status']==1}}
-                            <a class="blue" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
+                        <a class="blue" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
                             <span title="点击锁定" class="badge badge-warning">正常</span></a>
                         {{else}}
-                            <a class="blue" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
+                        <a class="blue" href="javascript:del('/{{$_controller}}/lock?id={{$row['id']}}')">
                             <span title="点击解锁" class="badge">锁定</span></a>
                         {{/if}}
                     </td>
@@ -49,7 +62,7 @@
                            href="javascript:del('/{{$_controller}}/del?id={{$row['id']}}')">
                             <i class="fa fa-trash-o bigger-130"></i>
                         </a>
-                    </div></td>
+
                 </tr>
                 {{/foreach}}
                 </tbody>
@@ -64,11 +77,6 @@
 </div>
 
 <script>
-    jQuery(function($) {
-        $('.glyphicon.glyphicon-plus').each(function(){
-            $(this).on('click', function(){
-                $(this).toggleClass('glyphicon-minus');
-            });
-        });
-    })
+jQuery(function($) {
+});
 </script>
