--- a/application/admin_ace/view/layout/part_breadcrumbs.html
+++ b/application/admin_ace/view/layout/part_breadcrumbs.html
@@ -2,7 +2,7 @@
     <ul class="breadcrumb">
         <li>
             <i class="ace-icon fa fa-home home-icon"></i>
-            <a href="#">Home</a>
+            <a href="#">根</a>
         </li>
         <li class="active">{{$title}}</li>
     </ul><!-- /.breadcrumb -->
