--- a/application/admin_ace/view/layout/nopower.html
+++ b/application/admin_ace/view/layout/nopower.html
@@ -27,8 +27,8 @@
                 <div class="space"></div>
 
                 <div class="center">
-                    <a href="javascript:history.back()" class="btn btn-grey"><i class="ace-icon fa fa-arrow-left"></i>Go Back</a>
-                    <a href="/" class="btn btn-primary"><i class="ace-icon fa fa-tachometer"></i>Dashboard</a>
+                    <a href="javascript:history.back()" class="btn btn-grey"><i class="ace-icon fa fa-arrow-left"></i>返回</a>
+                    <a href="/" class="btn btn-primary"><i class="ace-icon fa fa-tachometer"></i>控制台</a>
                 </div>
             </div>
         </div>
