--- a/application/admin_ace/view/sysfunc/add.html
+++ b/application/admin_ace/view/sysfunc/add.html
@@ -16,8 +16,11 @@
 
                 <div class="col-sm-9">
                     <select class="col-sm-3 select"  name="vars[pid]">
+                        <option value="0">根节点</option>
                         {{foreach $functionrows as $fun}}
-                        <option value="{{$fun['id']}}" {{if $item['pid']==$fun['id']}} selected{{/if}}>{{$fun['name']}}</option>
+                            <option value="{{$fun['id']}}" {{if $item['pid']==$fun['id']}} selected{{/if}}>
+                                {{$fun['name']}}
+                            </option>
                         {{/foreach}}
                     </select>
                 </div>
@@ -43,11 +46,12 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-2"> 是否菜单: </label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-2"> 
+                    是否菜单: 
+                </label>
 
                 <div class="col-sm-9">
                     <label class="inline">
-
                         <input id="id-button-borders" name="vars[is_menu]" checked="checked" class="ace ace-switch ace-switch-5" type="checkbox">
                         <span class="lbl middle"></span>
                     </label>
@@ -57,7 +61,9 @@
             <div class="space-4"></div>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-input-readonly"> 功能描述: </label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-input-readonly"> 
+                    功能描述: 
+                </label>
 
                 <div class="col-sm-9">
                     <textarea class="col-sm-5" name="vars[desc]">{{$item['desc']}}</textarea>
@@ -67,7 +73,9 @@
             <div class="space-4"></div>
 
             <div id="form-group-icon" class="form-group">
-                <label class="col-sm-3 control-label no-padding-right" for="form-field-4">菜单图标</label>
+                <label class="col-sm-3 control-label no-padding-right" for="form-field-4">
+                    菜单图标
+                </label>
 
                 <div class="col-sm-9">
                     <label class="control-label" for="form-field-4"><i id="selected_icon" class="icon-only ace-icon bigger-150 {{$item['icon']}}"></i></label>
@@ -108,7 +116,6 @@
                     <button class="btn btn-info" type="submit">
                         <i class="ace-icon fa fa-check bigger-110"></i>提交
                     </button>
-
                     &nbsp; &nbsp; &nbsp;
                     <button class="btn" type="reset">
                         <i class="ace-icon fa fa-undo bigger-110"></i>重置
