--- a/application/admin_ace/view/layout/part_footer.html
+++ b/application/admin_ace/view/layout/part_footer.html
@@ -2,10 +2,8 @@
 	<!-- #section:basics/footer -->
 	<div class="footer-content">
 		<span class="bigger-120">
-			<span class="blue bolder">{{$_sys_name}}</span>
-			Application &copy; forever
+			<span class="blue bolder">{{$_sys_name}}</span>&nbsp;{{$_sys_copyright}}
 		</span>
 	</div>
-
 	<!-- /section:basics/footer -->
 </div>
