--- a/application/admin_ace/view/layout/part_userinfo.html
+++ b/application/admin_ace/view/layout/part_userinfo.html
@@ -231,8 +231,7 @@
             <i class="ace-icon fa fa-caret-down"></i>
         </a>
         <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
-            <li><a href="#"><i class="ace-icon fa fa-cog"></i> 系统设置</a></li>
-            <li><a href="?page=profile"><i class="ace-icon fa fa-user"></i> 个人设置</a></li>
+            <li><a href="/sysuser/repwd"><i class="ace-icon fa fa-user"></i> 修改信息</a></li>
             <li class="divider"></li>
             <li><a href="/login/out"><i class="ace-icon fa fa-power-off"></i> 退出登录</a></li>
         </ul>
