--- a/application/admin_ace/view/layout/part_navlist.html
+++ b/application/admin_ace/view/layout/part_navlist.html
@@ -9,7 +9,7 @@
 
 {{if !empty($menulist)}}
     {{foreach $menulist as $menu}}
-    {{if $menu['is_menu'] == 1}}
+    {{if $menu['is_menu'] == 1 && $menu['status'] == 1}}
     <li class="{{if $menu['open_menu']}}open{{/if}}">
         <a href="#" class="dropdown-toggle">
             <i class="menu-icon {{$menu['icon']}}"></i>
@@ -22,7 +22,7 @@
         <ul class="submenu">
             {{if isset($menu['sub']) }}
                 {{foreach $menu['sub'] as $sub}}
-                {{if $sub['is_menu']==1 }}
+                {{if $sub['is_menu']==1 && $sub['status'] == 1}}
                 <li class="">
                     <a href="/{{$sub['controller']}}/{{$sub['action']}}">
                         <i class="menu-icon fa fa-caret-right"></i>
