--- a/application/admin_ace/view/syslog/index.html
+++ b/application/admin_ace/view/syslog/index.html
@@ -4,7 +4,7 @@
 
     <div class="col-xs-12">
 
-        <form action="{{$getaction}}" method="POST" class="form-search">
+        <form action="" method="POST" class="form-search">
             <table class="table table-striped table-bordered table-hover">
                 <tr>
                     <td class="col-xs-3 col-sm-1">
