--- a/application/backend_ace/view/syslog/index.html
+++ b/application/backend_ace/view/syslog/index.html
@@ -1,11 +1,8 @@
 <div class="row">
-    
-
-
     <div class="col-xs-12">
 
         <form action="" method="POST" class="form-search">
-            <table class="table table-striped table-bordered table-hover">
+            <table class="table table-bordered table-hover">
                 <tr>
                     <td class="col-xs-3 col-sm-1">
                         <select id="select_k" name="search_type">
@@ -36,8 +33,7 @@
         </form>
 
         <div class="table-responsive">
-            <table id="function-table"
-                   class="table table-striped table-hover">
+            <table id="function-table" class="table table-bordered table-hover">
                 <thead>
                 <tr>
                     <th class="col-sm-1">序号</th>
