--- a/application/backend_ace/view/sysuser/index.html
+++ b/application/backend_ace/view/sysuser/index.html
@@ -1,8 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="table-responsive">
-            <table id="function-table"
-                   class="table table-striped table-hover">
+            <table id="function-table" class="table table-bordered table-hover">
                 <thead>
                 <tr>
                     <th class="col-sm-1">序号</th>
